# multi-agent-code-review

./: .gitignore  README.md  pyproject.toml
code_review/: __init__.py  agents.py  cli.py  github.py  graph.py  llm.py  models.py  report.py
examples/: demo_offline.py
samples/: vulnerable_example.py
tests/: conftest.py  fakes.py  test_graph.py  test_report.py
