[project]
name = "code-review-agents"
version = "0.1.0"
description = "Multi-agent code review system (bugs, security, test coverage) built on LangChain + LangGraph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
]

[project.scripts]
code-review = "code_review.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_review"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
